# LIGGGHTS-PFM

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  buildingTheDocumentation.md
doc/: .gitignore  (+415 more)
src/: .gitignore  CMakeLists.txt  Make.sh  Makefile.lib  Makefile.package  abstract_mesh.h  angle.cpp  angle.h  angle_cosine.h  angle_hybrid.cpp  angle_hybrid.h  associative_pointer_array.h  associative_pointer_array_I.h  atom.cpp  atom.h  atom_map.cpp  atom_vec.cpp  atom_vec.h  atom_vec_angle_gran.cpp  atom_vec_angle_gran.h  atom_vec_atomic.cpp  atom_vec_body.cpp  atom_vec_bond_gran.cpp  atom_vec_bond_gran.h  atom_vec_charge.cpp  atom_vec_ellipsoid.cpp  atom_vec_hybrid.cpp  atom_vec_hybrid.h  atom_vec_line.cpp  atom_vec_sph.cpp  atom_vec_sph.h  atom_vec_sph_var.cpp  atom_vec_sph_var.h  atom_vec_sphere.cpp  atom_vec_sphere.h  atom_vec_sphere_omp.cpp  atom_vec_sphere_omp.h  atom_vec_sphere_w.cpp  atom_vec_superquadric.cpp  atom_vec_superquadric.h  (+773 more)
src/ASPHERE/: compute_temp_asphere.cpp  fix_nh_asphere.cpp  fix_nve_asphere.cpp  fix_nve_asphere_noforce.cpp  fix_nve_line.cpp  fix_nve_tri.cpp  pair_gayberne.cpp  pair_line_lj.cpp  pair_resquared.cpp  pair_tri_lj.cpp
src/BODY/: body_nparticle.cpp  compute_body_local.cpp  pair_body.cpp
src/CLASS2/: angle_class2.h  bond_class2.h  dihedral_class2.cpp  improper_class2.cpp  pair_lj_class2.cpp  pair_lj_class2_coul_cut.cpp  pair_lj_class2_coul_long.cpp
src/COLLOID/: fix_wall_colloid.cpp  pair_colloid.cpp  pair_yukawa_colloid.cpp
src/DIPOLE/: atom_vec_dipole.cpp  pair_lj_cut_dipole_cut.cpp  pair_lj_cut_dipole_long.cpp  pair_lj_long_dipole_long.cpp
src/FLD/: pair_brownian.cpp  pair_brownian_poly.cpp  pair_lubricate.cpp  pair_lubricateU.cpp  pair_lubricateU_poly.cpp  pair_lubricate_poly.cpp
src/GPU/: fix_gpu.cpp  pair_beck_gpu.cpp  pair_born_coul_long_gpu.cpp  pair_born_coul_wolf_gpu.cpp  pair_born_gpu.cpp  pair_buck_coul_cut_gpu.cpp  pair_buck_coul_long_gpu.cpp  pair_buck_gpu.cpp  pair_colloid_gpu.cpp  pair_coul_dsf_gpu.cpp  pair_coul_long_gpu.cpp  pair_eam_alloy_gpu.cpp  pair_eam_fs_gpu.cpp  pair_eam_gpu.cpp  pair_eam_gpu.h  pair_gauss_gpu.cpp  pair_gayberne_gpu.cpp  pair_lj96_cut_gpu.cpp  pair_lj_charmm_coul_long_gpu.cpp  pair_lj_class2_coul_long_gpu.cpp  pair_lj_class2_gpu.cpp  pair_lj_cut_coul_cut_gpu.cpp  pair_lj_cut_coul_debye_gpu.cpp  pair_lj_cut_coul_dsf_gpu.cpp  pair_lj_cut_coul_long_gpu.cpp  pair_lj_cut_coul_msm_gpu.cpp  pair_lj_cut_dipole_cut_gpu.cpp  pair_lj_cut_gpu.cpp  pair_lj_expand_gpu.cpp  pair_lj_sdk_coul_long_gpu.cpp  pair_lj_sdk_gpu.cpp  pair_lj_sf_dipole_sf_gpu.cpp  pair_mie_cut_gpu.cpp  pair_morse_gpu.cpp  pair_resquared_gpu.cpp  pair_soft_gpu.cpp  pair_sw_gpu.cpp  pair_table_gpu.cpp  pair_yukawa_colloid_gpu.cpp  pair_yukawa_gpu.cpp  (+1 more)
src/KSPACE/: commgrid.cpp  ewald.cpp  ewald_disp.cpp  fft3d.cpp  fft3d_wrap.cpp  fix_tune_kspace.cpp  fix_tune_kspace.h  msm.cpp  msm.h  msm_cg.cpp  pair_born_coul_long.cpp  pair_born_coul_msm.cpp  pair_buck_coul_long.cpp  pair_buck_coul_msm.cpp  pair_buck_long_coul_long.cpp  pair_coul_long.cpp  pair_coul_msm.cpp  pair_lj_charmm_coul_long.cpp  pair_lj_charmm_coul_msm.cpp  pair_lj_cut_coul_long.cpp  pair_lj_cut_coul_msm.cpp  pair_lj_cut_tip4p_long.cpp  pair_lj_long_coul_long.cpp  pair_lj_long_tip4p_long.cpp  pair_tip4p_long.cpp  pppm.cpp  pppm.h  pppm_cg.cpp  pppm_disp.cpp  pppm_disp.h  pppm_disp_tip4p.cpp  pppm_old.cpp  pppm_old.h  pppm_stagger.cpp  pppm_tip4p.cpp  remap.cpp  remap_wrap.cpp
src/MAKE/: Makefile.clang  Makefile.fedora  Makefile.fedora_debug  Makefile.fedora_debug_opt  Makefile.fedora_fpic  Makefile.fedora_fpic_debug  Makefile.fedora_gp  Makefile.fedora_profile  Makefile.fedora_profile_optim  Makefile.hybrid  Makefile.hybrid_debug  Makefile.ubuntuVTK  Makefile.ubuntuVTK6  Makefile.ubuntuVTK62  Makefile.ubuntuVTK63  Makefile.ubuntuVTK6_superquadric  Makefile.ubuntuVTK_fpic
src/MANYBODY/: fix_qeq_comb.cpp  fix_qeq_comb.h  pair_adp.cpp  pair_airebo.cpp  pair_airebo.h  pair_bop.cpp  pair_comb.cpp  pair_comb3.cpp  pair_eam.cpp  pair_eam.h  pair_eam_alloy.cpp  pair_eam_fs.cpp  pair_eim.cpp  pair_eim.h  pair_lcbop.cpp  pair_lcbop.h  pair_nb3b_harmonic.cpp  pair_sw.cpp  pair_tersoff.cpp  pair_tersoff_mod.cpp  pair_tersoff_zbl.cpp
src/MC/: fix_bond_break.cpp  fix_bond_create.cpp  fix_bond_swap.cpp  fix_gcmc.cpp  fix_gcmc.h
src/MEAM/: pair_meam.cpp
src/MISC/: compute_msd_nongauss.cpp  compute_ti.cpp  fix_efield.cpp  fix_evaporate.cpp  fix_gld.cpp  fix_orient_fcc.cpp  fix_thermal_conductivity.cpp  fix_ttm.cpp  fix_viscosity.cpp  pair_nm_cut.cpp  pair_nm_cut_coul_cut.cpp  pair_nm_cut_coul_long.cpp
src/MOLECULE/: angle_charmm.cpp  angle_charmm.h  angle_cosine_delta.h  angle_cosine_periodic.cpp  angle_cosine_periodic.h  angle_cosine_squared.h  angle_harmonic.cpp  angle_harmonic.h  angle_table.cpp  angle_table.h  atom_vec_angle.cpp  atom_vec_bond.cpp  atom_vec_full.cpp  atom_vec_molecular.cpp  bond_fene.cpp  bond_fene.h  bond_fene_expand.cpp  bond_fene_expand.h  bond_harmonic.cpp  bond_harmonic.h  bond_morse.h  bond_nonlinear.h  bond_quartic.cpp  bond_quartic.h  bond_table.cpp  bond_table.h  dihedral_charmm.cpp  dihedral_charmm.h  dihedral_harmonic.cpp  dihedral_harmonic.h  dihedral_helix.cpp  dihedral_helix.h  dihedral_multi_harmonic.cpp  dihedral_multi_harmonic.h  dihedral_opls.cpp  dihedral_opls.h  improper_cvff.cpp  improper_harmonic.cpp  improper_harmonic.h  improper_umbrella.cpp  (+6 more)
src/OPT/: pair_eam_opt.cpp  pair_lj_charmm_coul_long_opt.cpp  pair_lj_cut_opt.cpp  pair_lj_cut_tip4p_long_opt.cpp  pair_lj_long_coul_long_opt.cpp  pair_morse_opt.cpp
src/PASCAL/: fix_pascal_couple.cpp  fix_pascal_couple.h
src/PERI/: atom_vec_peri.cpp  compute_damage_atom.cpp  fix_peri_neigh.cpp  pair_peri_lps.cpp  pair_peri_pmb.cpp  pair_peri_ves.cpp
src/POEMS/: fix_poems.cpp
src/REAX/: fix_reax_bonds.cpp  fix_reax_bonds.h  pair_reax.cpp
src/REPLICA/: compute_event_displace.cpp  fix_event.cpp  fix_event_prd.cpp  fix_neb.cpp  neb.cpp  neb.h  prd.cpp  tad.cpp  temper.cpp  verlet_split.cpp
src/RIGID/: compute_ke_rigid.cpp  fix_rigid.cpp  fix_rigid_nh.cpp  fix_rigid_nph.cpp  (+1 more)
(+623 files in other folders)
